# golf-balls

./: README.md
Backend/: Cargo.toml
Backend/Tests/: backend.py
Backend/src/: main.rs
Frontend/: index.html
Frontend/Assets/Shaders/: frag.glsl  vertex.glsl
Frontend/Source/: Math.js  Opengl.js
Frontend/Source/MeshGen/: Sphere.js
Frontend/Source/Primitives/: Camera.js  Sphere.js
Frontend/Source/Render/: Renderer.js
Frontend/Source/Render/Interfaces/: IMesh.js  IObject.js
